--- a/global.css
+++ b/global.css
@@ -1,1 +1,99 @@
+ *,
+ *:before,
+ *:after {
+     box-sizing: border-box;
 
+ }
+
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+     font: inherit
+ }
+
+ :root {
+     --bg-color: #09090b;
+     --surface-color: #18181B;
+     --stroke-color: #27272A;
+     --text-color-secondary: #A1A1AA;
+     --text-color-primary: #F4F4F5;
+
+
+     --brand-gradient: #FC4A1A, #F7B733;
+     --brand-color-primary: #F7B733;
+     --brand-color-secondary: #FC4A1A;
+
+
+     /* Typography */
+     --ff-sans: 'Inter', system-ui, sans-serif;
+     --fw-base: 400;
+     --fw-bold: 800;
+     --fw-md: 500;
+
+     --fs-sm: 0.875rem;
+     /* 14px */
+     --fs-base: 1rem;
+     /* 16px */
+     --fs-lg: 1.125rem;
+     /* 18px */
+     --fs-xl: 1.5rem;
+     /* 20px */
+     --fs-2xl: 2.5rem;
+     /* 40px */
+
+
+
+ }
+
+ html {
+     font-family: var(--ff-sans);
+     font-weight: var(--fw-base);
+     font-size: var(--fs-base);
+     line-height: 1.6;
+     color: var(--text-color-primary);
+ }
+
+ body {
+     background-color: var(--bg-color);
+
+ }
+
+ h1,
+ h2,
+ h3 {
+     line-height: 1.2;
+     color: var(--text-color-primary);
+     font-weight: var(--fw-bold);
+     letter-spacing: -0.04em;
+ }
+
+ h1 {
+     font-size: var(--fs-2xl);
+ }
+
+ h2 {
+     font-size: var(--fs-xl);
+ }
+
+ h3 {
+     font-size: var(--fs-lg);
+ }
+
+ a {
+     color: inherit;
+     text-decoration: none;
+ }
+
+ ul [role="list"]{
+        list-style: none;
+ }
+
+ @media (width >= 80em) {
+     :root{
+            
+            --fs-lg: 2rem;
+            --fs-xl: 3rem;
+            --fs-2xl: 4rem;
+     }
+ }
